--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           python-version: "3.x"
 
+      - name: Install build dependencies
+        run: python -m pip install --upgrade pip setuptools wheel
+
       - name: Build release distributions
         run: |
           # NOTE: put your own distribution build steps here.
