--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,8 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Install build dependencies
-        run: python -m pip install --upgrade pip setuptools wheel
+      - name: Install building dependency
+        run: python -m pip install setuputils
 
       - name: Build release distributions
         run: |
