--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,12 +27,11 @@ jobs:
           python-version: "3.x"
 
       - name: Install building dependency
-        run: python -m pip install setuptools wheel
+        run: python -m pip install build
 
       - name: Build release distributions
         run: |
-          # NOTE: put your own distribution build steps here.
-          python setup.py sdist bdist_wheel
+          python -m build
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
