--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "loguru>=0.7.3",
     "pywin32>=311; platform_system=='Windows'",
     "win32_setctime>=1.2.0; platform_system=='Windows'",
+    "pandas>=2.3.2",
 ]
 
 [tool.setuptools.packages.find]
