--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,42 @@
+alabaster==1.0.0
+babel==2.17.0
+build==1.3.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
 colorama==0.4.6
+docutils==0.21.2
+idna==3.10
+imagesize==1.4.1
+Jinja2==3.1.6
 loguru==0.7.3
+MarkupSafe==3.0.2
+mypy_extensions==1.1.0
+numpy==2.3.2
+packaging==25.0
+pandas==2.3.2
+pathspec==0.12.1
+platformdirs==4.3.8
+Pygments==2.19.2
+pyproject_hooks==1.2.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
 pywin32==311
+requests==2.32.4
+roman-numerals-py==3.1.0
+setuptools==80.9.0
+six==1.17.0
+snowballstemmer==3.0.1
+Sphinx==8.2.3
+sphinx-autodoc-typehints==3.2.0
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+tzdata==2025.2
+urllib3==2.5.0
 win32_setctime==1.2.0
