Set draft on false

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -35,5 +35,6 @@ jobs:
         with:
           tag_name: ${{ steps.get_version.outputs.version }}
           name: ${{ steps.get_version.outputs.version }}
+          draft: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
