--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pywin32>=311; platform_system=='Windows'",
     "win32_setctime>=1.2.0; platform_system=='Windows'",
     "pandas>=2.3.2",
+    "psutil>=7.0.0",
 ]
 
 [tool.setuptools.packages.find]
