--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ packaging==25.0
 pandas==2.3.2
 pathspec==0.12.1
 platformdirs==4.3.8
+psutil==7.0.0
 Pygments==2.19.2
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
