--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyplantsim"
-version = "0.4.1"
+version = "0.4.2"
 description = "A Python wrapper for Siemens Tecnomatix Plant Simulation COM Interface"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -21,6 +21,7 @@ dependencies = [
     "win32_setctime>=1.2.0; platform_system=='Windows'",
     "pandas>=2.3.2",
     "psutil>=7.0.0",
+    "plantsimpath>=0.0.2",
 ]
 
 [tool.setuptools.packages.find]
