--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyplantsim"
-version = "0.4.2"
+version = "0.4.3"
 description = "A Python wrapper for Siemens Tecnomatix Plant Simulation COM Interface"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -13,7 +13,6 @@ authors = [
     {name = "Luca Bernstiel", email = "bernstiel@gmx.de"},
 ]
 keywords = ["plant", "siemens", "simulation", "COM"]
-urls = { "Homepage" = "https://github.com/malun22/pyplantsim" }
 dependencies = [
     "colorama>=0.4.6",
     "loguru>=0.7.3",
@@ -21,12 +20,17 @@ dependencies = [
     "win32_setctime>=1.2.0; platform_system=='Windows'",
     "pandas>=2.3.2",
     "psutil>=7.0.0",
-    "plantsimpath>=0.0.2",
+    "plantsimpath>=0.0.3",
 ]
+
+[project.urls]
+Homepage = "https://github.com/malun22/pyplantsim"
+Documentation = "https://malun22.github.io/pyplantsim/"
+Repository = "https://github.com/malun22/pyplantsim"
 
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["pyplantsim*"]
 
 [tool.setuptools.package-data]
-pyplantsim = ["sim_talk_scripts/*.st"]
+pyplantsim = ["py.typed", "sim_talk_scripts/*.st"]
