--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -42,6 +42,8 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+      - name: Install dependencies
+        run: pip install -r requirements-dev.txt
       - name: Install mypy
         run: pip install mypy
       - name: mypy typecheck
