--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ Pygments==2.19.2
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
-pywin32==311
+pywin32==311; platform_system == "Windows"
 requests==2.32.4
 roman-numerals-py==3.1.0
 setuptools==80.9.0
@@ -41,4 +41,4 @@ sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
 tzdata==2025.2
 urllib3==2.5.0
-win32_setctime==1.2.0
+win32_setctime==1.2.0; platform_system == "Windows"
