--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,13 @@ authors = [
 ]
 keywords = ["plant", "siemens", "simulation", "COM"]
 dependencies = [
-    "colorama>=0.4.6",
     "loguru>=0.7.3",
     "pywin32>=311; platform_system=='Windows'",
     "win32_setctime>=1.2.0; platform_system=='Windows'",
     "pandas>=2.3.2",
     "psutil>=7.0.0",
     "plantsimpath>=0.0.3",
+    "packaging>=25.0"
 ]
 
 [project.optional-dependencies]
@@ -30,6 +30,12 @@ dev = [
     "pandas-stubs",
     "types-psutil",
     "loguru-mypy",
+    "plantsimpath",
+    "packaging",
+]
+docs = [
+    "sphinx",
+    "sphinx-autodoc-typehints",
 ]
 
 [project.urls]
