--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -19,8 +19,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install sphinx sphinx-autodoc-typehints sphinx-rtd-theme
-          pip install .  # Damit autodoc deine Module findet
+          pip install -r requirements-dev.txt
+          pip install .
 
       - name: Build Sphinx docs
         working-directory: docs
