--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,7 +3,9 @@ types-pywin32
 pandas-stubs
 types-psutil
 loguru
+loguru-mypy
 sphinx
 sphinx-autodoc-typehints
+sphinx-rtd-theme
 plantsimpath
 packaging
